# WEBhw_aiohttp

hw/: pyproject.toml
hw/hw/: main.py  requirements.txt
